Fixed footer section names to be more consistent. Fixed spacing and links from the nav bar.

--- a/ar-portfolio/src/index.css
+++ b/ar-portfolio/src/index.css
@@ -65,3 +65,8 @@ body {
 .animate-fade {
   animation: fade 1s ease-in-out;
 }
+
+html {
+  scroll-padding-top: 125px; 
+  scroll-behavior: smooth; 
+}
